add_library(impl_buffer INTERFACE impl_buffer.h)
target_link_libraries(impl_buffer INTERFACE types)

add_library(impl_doubly_linked_list INTERFACE impl_doubly_linked_list.h)
target_link_libraries(impl_doubly_linked_list INTERFACE types)

add_library(impl_singly_linked_list INTERFACE impl_singly_linked_list.h)
target_link_libraries(impl_singly_linked_list INTERFACE types)

add_library(impl_tree INTERFACE impl_tree.h)
target_link_libraries(impl_tree INTERFACE types)

add_library(impl_flat_priority_queue INTERFACE impl_flat_priority_queue.h)
target_link_libraries(impl_flat_priority_queue INTERFACE buffer types)

add_library(impl_priority_queue INTERFACE impl_priority_queue.h)
target_link_libraries(impl_priority_queue INTERFACE types)

add_library(impl_flat_hash_map INTERFACE impl_flat_hash_map.h)
target_link_libraries(impl_flat_hash_map INTERFACE types buffer)
